<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.csaba.quiztador.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/bkg_login_sign_up"
        android:scaleType="centerCrop"
        android:src="@drawable/bkg_login_signup_2" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="@color/backgroundGradient"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/app_name"
            android:layout_centerHorizontal="true"
            android:textColor="#FFFFFF"
            android:textSize="48sp"
            android:focusable="true"/>

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/app_title"
            android:layout_marginEnd="52dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="128dp"
            android:textColor="#FFFFFF"
            android:backgroundTint="#FFFFFf"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/et_user_icon"
            android:hint="@string/username"
            android:singleLine="true"
            android:textAllCaps="true"
            android:textColorHint="#FFFFFF" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/et_username"
            android:layout_marginEnd="52dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="8dp"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:backgroundTint="#FFFFFf"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/et_password2"
            android:hint="@string/password"
            android:singleLine="true"
            android:textAllCaps="true"
            android:textColorHint="#FFFFFF" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/et_password"
            android:layout_marginEnd="52dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/btn_generic"
            android:text="@string/btn_login"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lnk_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_sign_up"
            android:layout_marginTop="16dp"
            android:textColor="#FFFFFF"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/btn_login"/>

    </RelativeLayout>

</RelativeLayout>
